[gd_scene load_steps=17 format=3 uid="uid://7m42pwkxpiyk"]

[ext_resource type="Texture2D" uid="uid://dmijws0qtohqv" path="res://Art/map_game_dev.png" id="1_kwisq"]
[ext_resource type="Script" path="res://Code/main_level.gd" id="1_on6me"]
[ext_resource type="Texture2D" uid="uid://86ugfothrqh3" path="res://Art/Enemy tile.png" id="2_kgxpu"]
[ext_resource type="Texture2D" uid="uid://blc4wdqg1l7d1" path="res://Art/Friendly Territory.png" id="3_ku1it"]
[ext_resource type="Texture2D" uid="uid://chocj0fegf1s5" path="res://Art/Medical Supplies.png" id="8_5fsu6"]
[ext_resource type="Texture2D" uid="uid://bgd70klwecclt" path="res://Art/Car.png" id="8_hj7h2"]
[ext_resource type="Texture2D" uid="uid://d00he3c4cuxsk" path="res://Art/Train.png" id="9_5ea8d"]
[ext_resource type="Texture2D" uid="uid://djawje286itva" path="res://Art/Munitions.png" id="9_71tjj"]
[ext_resource type="Texture2D" uid="uid://brqabvx35bgkr" path="res://Art/Plane.png" id="10_h31sk"]
[ext_resource type="Texture2D" uid="uid://pkjj1opmnssb" path="res://Art/Guns.png" id="10_nfj3e"]
[ext_resource type="Texture2D" uid="uid://dpcjijvoyqvuw" path="res://Art/Fuel.png" id="11_mg5sn"]
[ext_resource type="Script" path="res://Code/Provinces.gd" id="12_8epo0"]
[ext_resource type="PackedScene" uid="uid://dc1ieuftne1x7" path="res://Scenes/province.tscn" id="12_y1dea"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_08ri3"]
texture = ExtResource("2_kgxpu")
texture_region_size = Vector2i(46, 55)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t4i2k"]
texture = ExtResource("3_ku1it")
texture_region_size = Vector2i(46, 55)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vsx0s"]
tile_size = Vector2i(46, 55)
sources/0 = SubResource("TileSetAtlasSource_08ri3")
sources/1 = SubResource("TileSetAtlasSource_t4i2k")

[node name="Main level" type="Node2D"]
script = ExtResource("1_on6me")

[node name="MapGameDev" type="Sprite2D" parent="."]
position = Vector2(-61, 47)
scale = Vector2(0.454186, 0.554273)
texture = ExtResource("1_kwisq")

[node name="Camera2D" type="Camera2D" parent="MapGameDev"]
scale = Vector2(2.3, 2.3)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vsx0s")
format = 2
layer_0/tile_data = PackedInt32Array(131073, 0, 0, 131072, 0, 0, 196607, 0, 0, 196606, 0, 0, 196605, 0, 0, 196604, 0, 0, 196603, 0, 0, 196602, 1, 0, 196601, 1, 0, 196600, 1, 0, 196599, 1, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 65533, 0, 0, 65532, 0, 0, -4, 0, 0, -5, 1, 0, 65531, 1, 0, -6, 1, 0, -7, 1, 0, -8, 1, 0, -9, 1, 0, 65526, 1, 0, 131063, 1, 0, 131065, 1, 0, 131066, 1, 0, 65530, 1, 0, 65529, 1, 0, -10, 1, 0, 131062, 1, 0, 131064, 1, 0, 65528, 1, 0, 65525, 1, 0, 131061, 1, 0, 65527, 1, 0, -65546, 1, 0, -65547, 1, 0, -11, 1, 0, -65544, 1, 0, -65545, 1, 0, -131081, 1, 0, -131082, 1, 0, -131083, 1, 0, -131084, 1, 0, -131085, 1, 0, -65549, 1, 0, -13, 1, 0, -12, 1, 0, -196619, 1, 0, -196620, 1, 0, -196621, 1, 0, -196622, 1, 0, -131086, 1, 0, -65550, 1, 0, -65548, 1, 0, -262158, 1, 0, -262157, 1, 0, -262156, 1, 0, -262155, 1, 0, -262154, 1, 0, -262153, 1, 0, -262152, 1, 0, -262151, 1, 0, -262150, 1, 0, -262149, 1, 0, -262148, 1, 0, -262147, 1, 0, -196611, 1, 0, -131075, 1, 0, -131076, 1, 0, -196612, 1, 0, -196613, 1, 0, -196617, 1, 0, -196618, 1, 0, -196616, 1, 0, -196615, 1, 0, -196614, 1, 0, -131080, 1, 0, -131079, 1, 0, -131078, 1, 0, -131077, 1, 0, -65543, 1, 0, -65542, 1, 0, -65541, 1, 0, -65540, 1, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131074, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, 131070, 0, 0, 131071, 0, 0, 65535, 0, 0, 65534, 0, 0, 262139, 1, 0, 262140, 0, 0, 327675, 1, 0, 327676, 0, 0, 262141, 0, 0, 393211, 1, 0, 262137, 1, 0, 262136, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 262138, 1, 0, 327670, 1, 0, 262135, 1, 0, 262134, 1, 0, 262133, 1, 0, 196598, 1, 0, 196597, 1, 0, 196596, 1, 0, 196595, 1, 0, 262131, 1, 0, 262132, 1, 0, 131060, 1, 0, 65524, 1, 0, 65523, 1, 0, 131059, 1, 0, -14, 1, 0, 65522, 1, 0, 131058, 1, 0, 196594, 1, 0, 262130, 1, 0, 327666, 1, 0, 393202, 1, 0, 458738, 1, 0, 393203, 1, 0, 327667, 1, 0, 458739, 1, 0, 327668, 1, 0, 393204, 1, 0, 393205, 1, 0, 327669, 1, 0, 458740, 1, 0, 458741, 1, 0, 393206, 1, 0, 458742, 1, 0, 393207, 1, 0, 458743, 1, 0, 458744, 1, 0, 393208, 1, 0, 458745, 1, 0, 393209, 1, 0, 393210, 1, 0, 458746, 1, 0, 458747, 1, 0, 393212, 0, 0, 458748, 1, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 327678, 0, 0, 262142, 0, 0, 393214, 0, 0, 458750, 0, 0, 262143, 0, 0, 327679, 0, 0, 327680, 0, 0, 393216, 0, 0, 393217, 0, 0, 327681, 0, 0, 262145, 0, 0, 196609, 0, 0, 65537, 0, 0, 1, 0, 0, -65535, 0, 0, 0, 0, 0, 65536, 0, 0, 393215, 0, 0, 458751, 0, 0, 262144, 0, 0, 196608, 0, 0, 262146, 0, 0, 131076, 0, 0, 65540, 0, 0, -65532, 0, 0, -196606, 0, 0, -262143, 0, 0, -196608, 0, 0, -131071, 0, 0, -196607, 0, 0, -262144, 0, 0, -327680, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -262146, 0, 0, -196610, 0, 0, -262141, 0, 0, -327678, 0, 0, -327679, 0, 0, -262142, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -327676, 0, 0, -327677, 0, 0, -262134, 0, 0, -327670, 0, 0, -196600, 0, 0, -196598, 0, 0, -131065, 0, 0, -131066, 0, 0, -131067, 0, 0, -131070, 0, 0, -131062, 0, 0, -65534, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, 6, 0, 0, 7, 0, 0, 2, 0, 0, 10, 0, 0, -65526, 0, 0, 65544, 0, 0, 65543, 0, 0, 65546, 0, 0, 131077, 0, 0, 131079, 0, 0, 131082, 0, 0, 196615, 0, 0, 262147, 0, 0, 262152, 0, 0, 196618, 0, 0, 393225, 0, 0, 327689, 0, 0, 393224, 0, 0, 327688, 0, 0, 327687, 0, 0, 327686, 0, 0, 327685, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393220, 0, 0, 393219, 0, 0, 327683, 0, 0, 327684, 0, 0, 327682, 0, 0, 393218, 0, 0, 262149, 0, 0, 262148, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 262150, 0, 0, 262151, 0, 0, 65541, 0, 0, 65542, 0, 0, 131078, 0, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 196610, 0, 0, 131074, 0, 0, 65538, 0, 0, -65533, 0, 0, -131069, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -131068, 0, 0, -262139, 0, 0, -262140, 0, 0, -327674, 0, 0, -327675, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, -131064, 0, 0, -196601, 0, 0, -196602, 0, 0, -65528, 0, 0, 8, 0, 0, 65545, 0, 0, 9, 0, 0, 131081, 0, 0, 131080, 0, 0, 196617, 0, 0, 262153, 0, 0, 196616, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 393227, 0, 0, 327691, 0, 0, 262155, 0, 0, 196619, 0, 0, 131083, 0, 0, 65547, 0, 0, 11, 0, 0, -65525, 0, 0, -196597, 0, 0, -131061, 0, 0, -262133, 0, 0, -327669, 0, 0)

[node name="CarButton" type="TextureButton" parent="."]
offset_left = -634.0
offset_top = -270.0
offset_right = -495.0
offset_bottom = -130.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_hj7h2")

[node name="TrainButton" type="TextureButton" parent="."]
visible = false
offset_left = -530.0
offset_top = -270.0
offset_right = -387.0
offset_bottom = -130.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_5ea8d")

[node name="PlaneButton" type="TextureButton" parent="."]
visible = false
offset_left = -424.0
offset_top = -272.0
offset_right = -284.0
offset_bottom = -130.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_h31sk")

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 378.0
offset_top = 333.0
offset_right = 513.0
offset_bottom = 364.0
text = "End Turn Button"

[node name="MedicalSups" type="TextureButton" parent="."]
offset_left = 61.0
offset_top = -274.0
offset_right = 194.0
offset_bottom = -137.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_5fsu6")

[node name="AmmoSups" type="TextureButton" parent="."]
offset_left = 192.0
offset_top = -277.0
offset_right = 334.0
offset_bottom = -139.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_71tjj")

[node name="GunSups" type="TextureButton" parent="."]
offset_left = 318.0
offset_top = -276.0
offset_right = 458.0
offset_bottom = -137.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_nfj3e")

[node name="FuelSups" type="TextureButton" parent="."]
offset_left = 447.0
offset_top = -275.0
offset_right = 579.0
offset_bottom = -134.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("11_mg5sn")

[node name="Provinces" type="Node" parent="."]
script = ExtResource("12_8epo0")

[node name="Province1" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-520, -82)
province_number = 1

[node name="Province2" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-520, -27)
province_number = 2

[node name="Province3" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-520, 25)
province_number = 3

[node name="Province4" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-520, 80)
province_number = 4

[node name="Province5" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-520, 135)
province_number = 5

[node name="Province6" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-520, 191)
province_number = 6

[node name="Province7" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-474, -82)
province_number = 7

[node name="Province8" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-474, -27)
province_number = 8

[node name="Province9" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-474, 25)
province_number = 9

[node name="Province10" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-474, 80)
province_number = 10

[node name="Province11" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-474, 135)
province_number = 11

[node name="Province12" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-474, 191)
province_number = 12

[node name="Province13" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-428, -82)
province_number = 13

[node name="Province14" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-428, -27)
province_number = 14

[node name="Province15" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-428, 25)
province_number = 15

[node name="Province16" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-428, 80)
province_number = 16

[node name="Province17" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-428, 135)
province_number = 17

[node name="Province18" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-428, 191)
province_number = 18

[node name="Province19" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-382, -82)
province_number = 19

[node name="Province20" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-382, -27)
province_number = 20

[node name="Province21" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-382, 25)
province_number = 21

[node name="Province22" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-382, 80)
province_number = 22

[node name="Province23" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-382, 135)
province_number = 23

[node name="Province24" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-382, 191)
province_number = 24

[node name="Province25" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-338, -82)
province_number = 25

[node name="Province26" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-338, -27)
province_number = 26

[node name="Province27" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-338, 25)
province_number = 27

[node name="Province28" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-338, 80)
province_number = 28

[node name="Province29" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-338, 135)
province_number = 29

[node name="Province30" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-338, 191)
province_number = 30

[node name="Province31" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-292, -82)
province_number = 31

[node name="Province32" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-292, -27)
province_number = 32

[node name="Province33" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-292, 25)
province_number = 33

[node name="Province34" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-292, 80)
province_number = 34

[node name="Province35" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-292, 135)
province_number = 35

[node name="Province36" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-292, 191)
province_number = 36

[node name="Province37" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-244, -82)
province_number = 37

[node name="Province38" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-244, -27)
province_number = 38

[node name="Province39" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-244, 25)
province_number = 39

[node name="Province40" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-244, 80)
province_number = 40

[node name="Province41" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-244, 135)
province_number = 41

[node name="Province42" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-244, 191)
province_number = 42

[node name="Province43" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-198, -82)
province_number = 43

[node name="Province44" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-198, -27)
province_number = 44

[node name="Province45" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-198, 25)
province_number = 45

[node name="Province46" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-198, 80)
province_number = 46
is_enemy = true

[node name="Province47" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-198, 135)
province_number = 47
is_enemy = true

[node name="Province48" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-198, 191)
province_number = 48

[node name="Province49" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-152, -82)
province_number = 49

[node name="Province50" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-152, -27)
province_number = 50
is_enemy = true

[node name="Province51" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-152, 25)
province_number = 51
is_enemy = true

[node name="Province52" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-152, 80)
province_number = 52
is_enemy = true

[node name="Province53" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-152, 135)
province_number = 53
is_enemy = true

[node name="Province54" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-152, 191)
province_number = 54
is_enemy = true

[node name="Province55" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-106, -82)
province_number = 55
is_enemy = true

[node name="Province56" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-106, -27)
province_number = 56
is_enemy = true

[node name="Province57" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-106, 25)
province_number = 57
is_enemy = true

[node name="Province58" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-106, 80)
province_number = 58
is_enemy = true

[node name="Province59" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-106, 135)
province_number = 59
is_enemy = true

[node name="Province60" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-106, 191)
province_number = 60
is_enemy = true

[node name="Province61" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-58, -82)
province_number = 61
is_enemy = true

[node name="Province62" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-58, -27)
province_number = 62
is_enemy = true

[node name="Province63" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-58, 25)
province_number = 63
is_enemy = true

[node name="Province64" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-58, 80)
province_number = 64
is_enemy = true

[node name="Province65" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-58, 135)
province_number = 65
is_enemy = true

[node name="Province66" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-58, 191)
province_number = 66
is_enemy = true

[node name="Province67" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-22, -82)
province_number = 67
is_enemy = true

[node name="Province68" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-22, -27)
province_number = 68
is_enemy = true

[node name="Province69" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-22, 25)
province_number = 69
is_enemy = true

[node name="Province70" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-22, 80)
province_number = 70
is_enemy = true

[node name="Province71" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-22, 135)
province_number = 71
is_enemy = true

[node name="Province72" parent="Provinces" instance=ExtResource("12_y1dea")]
position = Vector2(-22, 191)
province_number = 72
is_enemy = true

[connection signal="pressed" from="CarButton" to="." method="_on_car_button_pressed"]
[connection signal="pressed" from="TrainButton" to="." method="_on_train_button_pressed"]
[connection signal="pressed" from="PlaneButton" to="." method="_on_plane_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
